Fix "whitespace" before ":" in ic-item-property

--- a/src/styles/ic-item-property.css
+++ b/src/styles/ic-item-property.css
@@ -23,6 +23,7 @@ ic-item-property.short .title {
 
 ic-item-property.short .title::after {
 	content:				':';
+	margin-left: 		-3px;
 }
 
 ic-item-property .content {
